# pentheonelite

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup-ssl.sh
.cursor/rules/: agents.mdc  aster-finance.mdc  configuration.mdc  development-workflow.mdc  python.mdc  reown-appkit.mdc  trading-platform.mdc  ui-design-system.mdc
app/: run.sh  stop.sh
app/backend/: .env.example  alembic.ini  main.py  ruff.toml
app/backend/alembic/: env.py  migration_helpers.py
app/backend/alembic/versions/: 0001_add_hedgefundflow_table.py  0002_add_data_column_to_hedge_fund_flows.py  0003_add_hedgefundflowrun_table.py  0004_add_hedgefundflowruncycle_table.py  0005_add_api_keys_table.py  0006_add_council_tables.py  0007_add_public_and_system_prompt.py  0008_create_unified_councils.py  0009_migrate_data_to_councils_v2.py  0010_create_minimal_users_table.py  0011_add_system_council_indexes.py  0012_remove_old_council_tables.py  0013_unify_councils_table.py  0014_add_portfolio_holdings.py  0015_refactor_market_orders.py  0016_add_consensus_decisions.py  0017_add_is_paper_trading.py  0018_recreate_agent_debates_table.py  0019_create_futures_positions.py  0020_create_spot_holdings.py  0021_create_orders_table.py  0022_create_pnl_snapshots.py  0023_update_councils_for_reset.py  0024_deprecate_old_tables.py  0025_add_exit_plan_fields.py  0026_add_unique_position_constraint.py  0027_merge_heads.py  023e9897fd38_add_council_performance_table.py  06dfdd78c85d_add_council_wallets_table.py  add_trading_mode_column.py  add_wallet_exchange_column.py  add_wallet_name_column.py  make_wallet_council_id_nullable.py  merge_wallet_and_trading_chains.py
app/backend/api/: __init__.py  events.py
app/backend/api/dependencies/: __init__.py  database.py
app/backend/api/routers/: __init__.py  api_keys.py  aster_websocket.py  councils.py  flow_runs.py  flows.py  health.py  hedge_fund.py  language_models.py  storage.py  websocket.py
app/backend/api/schemas/: __init__.py  api_keys.py  common.py  council.py  council_views.py  flow_runs.py  flows.py  graph.py  hedge_fund.py  storage.py  websocket.py
app/backend/api/utils/: __init__.py  agent_metadata.py  error_handling.py  validators.py
app/backend/client/: __init__.py
app/backend/client/aster/: __init__.py  futures.py  rest.py  websocket.py
app/backend/client/binance/: __init__.py  exceptions.py  rate_limiter.py  rest.py
app/backend/config/: __init__.py  api.py  aster.py  binance.py  database.py  llm.py  twitter.py
app/backend/db/: __init__.py  session.py  session_manager.py  uow.py
app/backend/db/models/: __init__.py  consensus.py  council.py  futures_position.py  order.py  pnl_snapshot.py  spot_holding.py  user.py  wallet.py
app/backend/db/repositories/: __init__.py  api_key_repository.py  base_repository.py  council_repository.py  flow_repository.py  flow_run_cycle_repository.py  flow_run_repository.py  futures_position_repository.py  spot_holding_repository.py  wallet_repository.py
app/backend/services/: agent_service.py  api_key_service.py  backtest_service.py  binance_futures_trading_service.py  council_metrics_service.py  council_orchestrator.py  council_trading_service.py  crypto_backtest_service.py  crypto_council_mock_data.py  debate_service.py  event_broadcaster.py  futures_position_service.py  graph.py  market_scheduler.py  portfolio_context_service.py  spot_holding_service.py  unified_trading_service.py
app/backend/src/: backtester.py  main.py
app/backend/src/agents/: __init__.py  agent_manager.py  base_agent.py  crypto_agent.py  crypto_risk_manager.py  futures_trading_agent.py  langchain_helpers.py  portfolio_manager.py  refactored_base.py  streaming_agent.py  trader_agent.py
app/backend/src/cli/: input.py  (+2 more)
app/backend/utils/: logging.py
app/frontend/: .env.example  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/frontend/app/: layout.tsx
app/frontend/src/: App.tsx  appkit-overrides.css  global.d.ts  index.css  main.tsx  router.tsx
docker/postgres/: docker-entrypoint.sh  init-pg-hba.sh  pg_hba.conf
examples/: aggressive_futures_trading.py  test_langchain_tools.py  test_new_langchain_tools.py
nginx/: nginx-production-secure.conf  nginx.conf
nginx/blocklists/: whitelist-ips.conf
nginx/conf.d/: bot-blocking.conf  exploit-blocking.conf  rate-limits.conf  security-headers.conf
scripts/: README.md  RESET_DATA_GUIDE.md  check_councils.py  create_test_positions.py  load_mock_data.sh  load_mock_data_councils.py  reset_council_data.py  run_orchestrator.py  setup_database.sh  start-backend.sh  start_orchestrator.sh  status_orchestrator.sh  stop_all_services.sh  stop_orchestrator.sh  test_binance_futures_testnet.py  test_close_position.py  test_debate_flow.py  test_full_cycle.py  test_llm_parsing.py  test_orchestrator.sh  test_portfolio_context.py  test_position_trading.py  test_single_council.py  test_trading_flow.py  test_websocket_connection.py
scripts/nginx/: analyze_logs.sh  monitor_attacks.sh  rollback_config.sh  test_config.sh
scripts/utils/: input.py
tests/: conftest.py  test_api_rate_limiting.py  test_council_trading_spot.py  test_portfolio_service.py
tests/backtesting/: conftest.py  test_portfolio.py  test_results.py  test_valuation.py
tests/backtesting/integration/: conftest.py  test_integration_long_only.py  test_integration_long_short.py  test_integration_short_only.py
tests/integration/: test_binance_futures_integration.py
tests/services/: conftest.py  test_futures_position_service.py
(+232 files in other folders)
