[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "roadto10m", email = "roadto10m@gmail.com" }]
dependencies = [
    "langchain>=0.3.7,<0.4.0",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai>=0.3.5,<0.4.0",
    "langchain-deepseek>=0.1.2,<0.2.0",
    "langgraph==0.2.56",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "colorama>=0.4.6,<0.5.0",
    "questionary>=2.1.0,<3.0.0",
    "rich>=13.9.4,<14.0.0",
    "langchain-google-genai>=2.0.11,<3.0.0",
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.7",
    "pydantic>=2.4.2,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "sqlalchemy>=2.0.22,<3.0.0",
    "sqlmodel>=0.0.21,<0.0.22",
    "alembic>=1.12.0,<2.0.0",
    "langchain-gigachat>=0.3.12,<0.4.0",
    "langchain-xai>=0.2.5,<0.3.0",
    "structlog>=24.2.0,<25.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "greenlet>=3.2.4",
    "ccxt>=4.5.12",
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "langchain-community>=0.3.21",
    "aster-connector-python",
    "langchain-core>=0.3.79",
    "click>=8.0.0",
    "litellm>=1.55.0,<2.0.0",
    "ddgs>=9.5.5",
    "googlesearch-python>=1.2.3",
    "pycountry>=24.2.0",
    "TA-Lib>=0.4.0",
    "newspaper4k>=0.9.3",
    "lxml[html-clean]>=5.2.0",
]

[project.scripts]
backtester = "src.backtesting.cli:main"

[dependency-groups]
dev = [
    "ruff~=0.12",
    "mypy~=1.17",
    "pydocstyle>=6.3.0,<7",
    "pytest>=8.0.0,<9",
    "pytest-github-actions-annotate-failures>=0.3.0,<0.4",
    "pytest-sugar>=1.0.0,<2",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.0.0,<7",
    "pytest-env>=1.1.3,<2",
    "pytest-split>=0.10.0,<0.11",
    "pytest-json-ctrf>=0.3.0,<1",
    "pre-commit>=4.0.0,<5",
    "types-PyYAML>=6.0.12.20240311,<7",
    "types-requests>=2.32.0.20240602,<3",
    "types-python-dateutil>=2.9.0.20240316,<3",
    "pyinstrument>=5.0.3",
    "types-aiofiles>=24.1.0.20250809",
    "pylint>=4.0.2",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disable_error_code = "arg-type, assignment, attr-defined, dict-item, typeddict-item, union-attr, call-arg, var-annotated, override, annotation-unchecked"
explicit_package_bases = true
exclude = [
    "alembic",
    "tests",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.2"
log_level = "ERROR"
addopts = """
    -ra
    --cov=app
    --cov-report term-missing:skip-covered
    --cov-report xml
    --durations=10
    --durations-min=1
    --maxfail=5
    --verbose
"""
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
testpaths = ["tests"]
python_files = "test_*.py"
junit_duration_report = "call"
env = [
    "TESTING=true",
    "ENVIRONMENT=test",
]

[tool.coverage.run]
branch = true
concurrency = [
    "greenlet",
    "thread",
]
omit = [
    "alembic/*",
    "tests/*",
    "app/config/*",
    "app/main.py",
    "app/db/session.py",
    "app/utils/logging.py",
]
source = ["app"]
relative_files = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]

[tool.pylint.MASTER]
# Add project root to Python path so pylint can resolve imports
init-hook = 'import sys; sys.path.insert(0, ".")'

[tool.pylint.TYPECHECK]
# These classes have dynamically added members at runtime that pylint cannot detect:
# - FieldInfo: SQLAlchemy column descriptors with dynamic query methods (is_, desc, ilike, in_, etc.)
# - Mock classes: Test doubles with dynamically added subscription methods
# - WorkflowEngine: Runtime workflow orchestration with dynamic method dispatch
# - AsterStreamingAnalystAgent: Streaming agent with async dynamic methods
# - Client: External aster-connector library with dynamically loaded API methods
ignored-classes = [
    "FieldInfo",
    "MockAsterWebSocketClient",
    "MockWebSocketClient",
    "WorkflowEngine",
    "AsterStreamingAnalystAgent",
    "Client",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "app/backend"]

[tool.uv.sources]
aster-connector-python = { git = "https://github.com/asterdex/aster-connector-python.git" }
